html-forms exercise completed.

--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -10,19 +10,22 @@
   <h1>Coding Form!</h1>
   <form>
     <label for="email">Email</label>
-  </form>
-  <input type="email" required>
-  <form>
+    <div>
+      <input id="email" type="email" required>
+    </div>
     <label for="cool"">Why is coding cool?</label>
-  </form>
-  <select>
-    <option value="">Select an option</option>
-    <option value="">Because it's interesting</option>
-    <option value="">Becacuse it's fun</option>
-    <option value="">Because it's powerful</option>
-  </select>
-  <p></p>
-  <div><label for="language">Favorite Language (choose one)</label></dib>
+    <div>
+      <select id="cool">
+        <option value="">Select an option</option>
+        <option value="">Because it's interesting</option>
+        <option value="">Becacuse it's fun</option>
+        <option value="">Because it's powerful</option>
+      </select>
+    </div>
+    <p></p>
+    <div>
+      <label for="language">Favorite Language (choose one)</label>
+    </div>
     <p></p>
     <div>
       <input type="radio" id="HTML" value="HTML" name="Language">
@@ -33,20 +36,20 @@
       <label for="JavaScript">JavaScript</label>
     </div>
     <p></p>
-  </div>
-  <div>
-    Would you like to sign up for more information?
-  </div>
-  <p></p>
-  <div>
-    <input type="checkbox" id="signup">
-    <label for="signup">Sign me up!</label>
-  </div>
-  <p></p>
-  <div>Comments</div>
-  <textarea id="comments" name="comments" rows="6" cols="30"></textarea>
-  <div>
-    <button type="submit">Submit</button>
-  </div>
+    <div>Would you like to sign up for more information?</div>
+    <p></p>
+    <div>
+      <input type="checkbox" id="signup">
+      <label for="signup">Sign me up!</label>
+    </div>
+    <p></p>
+    <div>
+      <label for="comments">Comments</label>
+    </div>
+    <textarea id="comments" name="comments" rows="6" cols="30"></textarea>
+    <div>
+      <button type="submit">Submit</button>
+    </div>
+  </form>
 </body>
 </html>
