html-forms exercise completed. added form attributes.

--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Coding Form!</h1>
-  <form>
+  <form action="" method="get">
     <label for="email">Email</label>
     <div>
       <input id="email" type="email" required>
@@ -22,11 +22,7 @@
         <option value="">Because it's powerful</option>
       </select>
     </div>
-    <p></p>
-    <div>
-      <label for="language">Favorite Language (choose one)</label>
-    </div>
-    <p></p>
+    <p>Favorite Language (choose one)</p>
     <div>
       <input type="radio" id="HTML" value="HTML" name="Language">
       <label for="HTML">HTML</label>
@@ -35,9 +31,7 @@
       <input type="radio" id="JavaScript" value="JavaScript" name="Language">
       <label for="JavaScript">JavaScript</label>
     </div>
-    <p></p>
-    <div>Would you like to sign up for more information?</div>
-    <p></p>
+    <p>Would you like to sign up for more information?</p>
     <div>
       <input type="checkbox" id="signup">
       <label for="signup">Sign me up!</label>
