added form element and changed nth of child to last child

--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -11,28 +11,30 @@
 </head>
 <body>
   <h3>LEARN MORE</h3>
-  <div class="main-container">
-    <div class="prompt">
-      <label for="email"> COMPANY EMAIL </label>
-      <div><input id="email" type="email" required placeholder="sally@company.co"></div>
+  <form action="">
+    <div class="main-container">
+      <div class="prompt">
+        <label for="email"> COMPANY EMAIL </label>
+        <div><input id="email" type="email" required placeholder="sally@company.co"></div>
+      </div>
+      <div class="prompt">
+        <label for="firstname">NAME</label>
+        <div><input id="firstname" type="text" placeholder="Sally Smith"></div>
+      </div>
+      <div class="prompt">
+        <label for="amount">WHERE ARE YOU HIRING?</label>
+        <div><input id="amount" type="text" placeholder="City, County"></div>
+      </div>
+      <div class="prompt">
+        <p>HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</p>
+        <select>
+          <option>1-2 Engineers</option>
+        </select>
+      </div>
+      <div class="button">
+        <button type="submit">SUBMIT</button>
+      </div>
     </div>
-    <div class="prompt">
-      <label for="firstname">NAME</label>
-      <div><input id="firstname" type="text" placeholder="Sally Smith"></div>
-    </div>
-    <div class="prompt">
-      <label for="amount">WHERE ARE YOU HIRING?</label>
-      <div><input id="amount" type="text" placeholder="City, County"></div>
-    </div>
-    <div class="prompt">
-      <p>HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</p>
-      <select>
-        <option>1-2 Engineers</option>
-      </select>
-    </div>
-    <div class="button">
-      <button type="submit">SUBMIT</button>
-    </div>
-  </div>
+  </form>
 </body>
 </html>
