fixed styling and naming

--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -9,35 +9,35 @@
 </head>
 <body>
   <div class="container">
-    <h2 class="main-header">Choose your character!</h2>
-    <div class="subcontainer">
-      <img src="images/link.png" class="subcontainer-big-image">
-      <div class="small-text-container subcontainer-item">
-        <h4 class="description-header">Super Smash Bros. Ultimate</h4>
-        <p class="description">Super Smash Bros. Ultimate received universal acclaim from both critics and players, with some critics calling it the best installment in the series. It received praise for iuts large amount of content and fine-tuning of existing Smash gameplay elements, although its online mode was widely criticized. </p>
+    <h1>Choose your character!</h1>
+    <div class="row">
+      <div class="column-third"><img src="images/link.png"></div>
+      <div class="column-third">
+        <h2>Super Smash Bros. Ultimate</h2>
+        <p>Super Smash Bros. Ultimate received universal acclaim from both critics and players, with some critics calling it the best installment in the series. It received praise for iuts large amount of content and fine-tuning of existing Smash gameplay elements, although its online mode was widely criticized. </p>
       </div>
-      <img src="images/yoshi.png" class="subcontainer-big-image">
+      <div class="column-third"><img src="images/yoshi.png"></div>
     </div>
-    <div class="subcontainer">
-      <img src="images/kirby.png" class="subcontainer-small-image">
-      <img src="images/fox.png" class="subcontainer-small-image">
-      <img src="images/pikachu.png" class="subcontainer-small-image">
-      <img src="images/ness.png" class="subcontainer-small-image">
+    <div class="row">
+      <img src="images/kirby.png" class="column-quarter">
+      <img src="images/fox.png" class="column-quarter">
+      <img src="images/pikachu.png" class="column-quarter">
+      <img src="images/ness.png" class="column-quarter">
     </div>
-    <div class="subcontainer">
-      <div class="big-text-container subcontainer-item">
-        <h4 class="description-header">Donkey Kong</h4>
-        <p class="description">Donkey Kong is a series of video games featuring the adventures of a gorilla called Donkey Kong, conceived by Shigeru Miyamoto in 1981. The franchise consists mainly of two game genres, but also includes additional spin-off titles of various genres. </p>
-        <p class="description">The games of the first genre are mostly single-screen platform/action puzzle types, featuring Donkey Kong as the opponent in an industrial construction setting. </p>
+    <div class="row">
+      <div class="column-two-thirds">
+        <h2>Donkey Kong</h2>
+        <p>Donkey Kong is a series of video games featuring the adventures of a gorilla called Donkey Kong, conceived by Shigeru Miyamoto in 1981. The franchise consists mainly of two game genres, but also includes additional spin-off titles of various genres. </p>
+        <p>The games of the first genre are mostly single-screen platform/action puzzle types, featuring Donkey Kong as the opponent in an industrial construction setting. </p>
       </div>
-      <img src="images/dk.png" class="subcontainer-big-image">
+      <img src="images/dk.png" class="column-third">
     </div>
-    <div class="subcontainer">
-      <img src="images/mario.png" class="subcontainer-big-image">
-      <div class="big-text-container subcontainer-item">
-        <h4 class="description-header">Mario</h4>
-        <p class="description">Mario is a fictional character in the Mario video game franchise, owned by Nintendo and created by Japanese video game designer Shigeru Miyamoto. Acting as the company's mascot, as well as being the eponymous protagonist of the series, Mario has appeared in over 200 video games since his creation. </p>
-        <p class="description">Depicted as a short, pudgy, Italian plumber who resides in the Mushroom Kingdom, his adventures generally center upon rescuing Princess Peach from the Koopa villain Bowser. </p>
+    <div class="row">
+      <img src="images/mario.png" class="column-third">
+      <div class="column-two-thirds">
+        <h2>Mario</h2>
+        <p>Mario is a fictional character in the Mario video game franchise, owned by Nintendo and created by Japanese video game designer Shigeru Miyamoto. Acting as the company's mascot, as well as being the eponymous protagonist of the series, Mario has appeared in over 200 video games since his creation. </p>
+        <p>Depicted as a short, pudgy, Italian plumber who resides in the Mushroom Kingdom, his adventures generally center upon rescuing Princess Peach from the Koopa villain Bowser. </p>
       </div>
     </div>
   </div>
