fixed styling and naming

--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -19,10 +19,10 @@
       <div class="column-third"><img src="images/yoshi.png"></div>
     </div>
     <div class="row">
-      <img src="images/kirby.png" class="column-quarter">
-      <img src="images/fox.png" class="column-quarter">
-      <img src="images/pikachu.png" class="column-quarter">
-      <img src="images/ness.png" class="column-quarter">
+      <div><img src="images/kirby.png" class="column-quarter"></div>
+      <div><img src="images/fox.png" class="column-quarter"></div>
+      <div><img src="images/pikachu.png" class="column-quarter"></div>
+      <div><img src="images/ness.png" class="column-quarter"></div>
     </div>
     <div class="row">
       <div class="column-two-thirds">
