finished most macro and micro. need to finish polish and measurements

--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -14,36 +14,65 @@
     <div class="row">
       <div class="col-100 ">
         <h1 class="ta-center">SCALE, SPEED, AGILITY</h1>
-        <p class="ta-center lh">
-          We've dedicated thousands of man hours to making healthcare institutions in the Helium network run 10x more efficienctly and deliver an unparalleled quality of care.
-        </p>
+        <div class="lh col-50 fs-12 ta-center">
+          <p>
+            We've dedicated thousands of man hours to making healthcare institutions in the Helium network run 10x more efficienctly and deliver an unparalleled quality of care.
+          </p>
+        </div>
       </div>
     </div>
     <div class="row jc-center">
       <div class="col-80">
-        <div class="med-card">
-          <div class="med-info row">
-            <div class="col-50">
-              <img src="images/software.svg">
-            </div>
-            <div class="col-50">
-              <p>INTUITIVE, SMART SOFTWARE</p>
-              <p>We build products that transform how healthcare facilities run across America - making them radically more efficient operationally and financially, a complete turnaround. </p>
+        <div class="row fw">
+          <div class="col-50 test">
+            <div class="row">
+              <div class="col-20"><img src="images/software.svg"></div>
+              <div class="col-80">
+                <h3>INTUITIVE, SMART SOFTWARE</h3>
+                <p class="fs-12 lh">We build products that transform how healthcare facilities run across Africa - making them radically more efficient
+                operationally and financially, a complete turnaround.</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="med-card">
-          <img src="images/practice.svg">
-        </div>
-        <div class="med-card">
-          <img src="images/circumstance.svg">
-        </div>
-        <div class="med-card">
-          <img src="images/data.svg">
+          <div class="col-50 test">
+            <div class="row">
+              <div class="col-20"><img src="images/practice.svg"></div>
+              <div class="col-80">
+                <h3>PRACTICE MEDICINE, NOT ADMINISTRATION</h3>
+                <p class="fs-12 lh">Our all-in-one electronic health records (EHR), hospital management (HMIS) &amp; billing system helps streamline your facility, reduce waste and improve quality of care. </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-50 test">
+            <div class="row">
+              <div class="col-20"><img src="images/circumstance.svg"></div>
+              <div class="col-80">
+                <h3>FOR ANY CIRCUMSTANCE</h3>
+                <p class="fs-12 lh">Our intuitive system is built around the peculiarities of your facility, we support offline deployments, sync to cloud and run on any device 24/7.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-50 test">
+            <div class="row">
+              <div class="col-20"><img src="images/data.svg"></div>
+              <div class="col-80">
+                <h3>DATA THAT TRANSFORMS</h3>
+                <p class="fs-12 lh">We understand your facility better than you do; we provide visually-appealing real-time analytics, reports, and trends at your finger tips. </p>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
         </div>
       </div>
     </div>
-    <div class="row jc-center"><button>LEARN MORE</button></div>
+    <div class="row jc-center">
+      <button class="fs-12">LEARN MORE</button>
+    </div>
   </div>
 </body>
 </html>
