finished most macro and micro. need to finish polish and measurements

--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -24,7 +24,7 @@
     <div class="row jc-center">
       <div class="col-80">
         <div class="row fw">
-          <div class="col-50 test">
+          <div class="col-50">
             <div class="row">
               <div class="col-20"><img src="images/software.svg"></div>
               <div class="col-80">
@@ -34,7 +34,7 @@
               </div>
             </div>
           </div>
-          <div class="col-50 test">
+          <div class="col-50">
             <div class="row">
               <div class="col-20"><img src="images/practice.svg"></div>
               <div class="col-80">
@@ -43,7 +43,7 @@
               </div>
             </div>
           </div>
-          <div class="col-50 test">
+          <div class="col-50">
             <div class="row">
               <div class="col-20"><img src="images/circumstance.svg"></div>
               <div class="col-80">
@@ -52,7 +52,7 @@
               </div>
             </div>
           </div>
-          <div class="col-50 test">
+          <div class="col-50">
             <div class="row">
               <div class="col-20"><img src="images/data.svg"></div>
               <div class="col-80">
@@ -61,12 +61,6 @@
               </div>
             </div>
           </div>
-
-
-
-
-
-
         </div>
       </div>
     </div>
