finished most macro and micro. need to finish polish and measurements

--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -28,7 +28,7 @@
             <div class="row">
               <div class="col-20"><img src="images/software.svg"></div>
               <div class="col-80">
-                <h3>INTUITIVE, SMART SOFTWARE</h3>
+                <h4>INTUITIVE, <br> SMART SOFTWARE</h4>
                 <p class="fs-12 lh">We build products that transform how healthcare facilities run across Africa - making them radically more efficient
                 operationally and financially, a complete turnaround.</p>
               </div>
@@ -38,7 +38,7 @@
             <div class="row">
               <div class="col-20"><img src="images/practice.svg"></div>
               <div class="col-80">
-                <h3>PRACTICE MEDICINE, NOT ADMINISTRATION</h3>
+                <h4>PRACTICE MEDICINE, NOT ADMINISTRATION</h4>
                 <p class="fs-12 lh">Our all-in-one electronic health records (EHR), hospital management (HMIS) &amp; billing system helps streamline your facility, reduce waste and improve quality of care. </p>
               </div>
             </div>
@@ -46,8 +46,8 @@
           <div class="col-50">
             <div class="row">
               <div class="col-20"><img src="images/circumstance.svg"></div>
-              <div class="col-80">
-                <h3>FOR ANY CIRCUMSTANCE</h3>
+              <div class="col-70">
+                <h4>FOR ANY CIRCUMSTANCE</h4>
                 <p class="fs-12 lh">Our intuitive system is built around the peculiarities of your facility, we support offline deployments, sync to cloud and run on any device 24/7.</p>
               </div>
             </div>
@@ -56,8 +56,8 @@
             <div class="row">
               <div class="col-20"><img src="images/data.svg"></div>
               <div class="col-80">
-                <h3>DATA THAT TRANSFORMS</h3>
-                <p class="fs-12 lh">We understand your facility better than you do; we provide visually-appealing real-time analytics, reports, and trends at your finger tips. </p>
+                <h4>DATA THAT TRANSFORMS</h4>
+                <p class="fs-12 lh">We understand your facility better than  you do; we provide visually-appealing  real-time analytics, reports, and trends at your finger tips. </p>
               </div>
             </div>
           </div>
