--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col-100 ">
         <h1 class="ta-center">SCALE, SPEED, AGILITY</h1>
-        <div class="lh col-50 fs-12 ta-center">
+        <div class="lh col-50 fs-12 ta-center margin">
           <p>
             We've dedicated thousands of man hours to making healthcare institutions in the Helium network run 10x more efficienctly and deliver an unparalleled quality of care.
           </p>
@@ -22,13 +22,13 @@
       </div>
     </div>
     <div class="row jc-center">
-      <div class="col-80">
+      <div class="col-90">
         <div class="row fw">
           <div class="col-50">
             <div class="row">
-              <div class="col-20"><img src="images/software.svg"></div>
-              <div class="col-80">
-                <h4>INTUITIVE, <br> SMART SOFTWARE</h4>
+              <div class="col-25"><img src="images/software.svg"></div>
+              <div class="col-50">
+                <h5 class="pos-rel-down">INTUITIVE, <br> SMART SOFTWARE</h5>
                 <p class="fs-12 lh">We build products that transform how healthcare facilities run across Africa - making them radically more efficient
                 operationally and financially, a complete turnaround.</p>
               </div>
@@ -36,27 +36,27 @@
           </div>
           <div class="col-50">
             <div class="row">
-              <div class="col-20"><img src="images/practice.svg"></div>
-              <div class="col-80">
-                <h4>PRACTICE MEDICINE, NOT ADMINISTRATION</h4>
+              <div class="col-25"><img src="images/practice.svg"></div>
+              <div class="col-50">
+                <h5 class="pos-rel-down">PRACTICE MEDICINE, NOT ADMINISTRATION</h5>
                 <p class="fs-12 lh">Our all-in-one electronic health records (EHR), hospital management (HMIS) &amp; billing system helps streamline your facility, reduce waste and improve quality of care. </p>
               </div>
             </div>
           </div>
           <div class="col-50">
             <div class="row">
-              <div class="col-20"><img src="images/circumstance.svg"></div>
-              <div class="col-70">
-                <h4>FOR ANY CIRCUMSTANCE</h4>
+              <div class="col-25"><img src="images/circumstance.svg"></div>
+              <div class="col-50">
+                <h5 class="pos-rel-down">FOR ANY CIRCUMSTANCE</h5>
                 <p class="fs-12 lh">Our intuitive system is built around the peculiarities of your facility, we support offline deployments, sync to cloud and run on any device 24/7.</p>
               </div>
             </div>
           </div>
           <div class="col-50">
             <div class="row">
-              <div class="col-20"><img src="images/data.svg"></div>
-              <div class="col-80">
-                <h4>DATA THAT TRANSFORMS</h4>
+              <div class="col-25"><img src="images/data.svg"></div>
+              <div class="col-50">
+                <h5 class="pos-rel-down">DATA THAT TRANSFORMS</h5>
                 <p class="fs-12 lh">We understand your facility better than  you do; we provide visually-appealing  real-time analytics, reports, and trends at your finger tips. </p>
               </div>
             </div>
