most gross formatting done. WIP

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -11,15 +11,21 @@
 </head>
 <body>
   <div class="container">
-    <div class="row row-padding">
+    <div class="row row-padding ai-center jc-space-between text-gray fs-12">
       <div>
         <img src="./images/logo-blue.svg" class="logo">
       </div>
-      <div>
-        <p>Contact Us</p>
+      <div class="col-50">
+        <div class="row ai-center ta-center jc-space-between">
+          <div class="col-fba">Product</div>
+          <div class="col-fba">Implementation</div>
+          <div class="col-fba">About Us</div>
+          <div class="col-fba">Blog</div>
+          <div class="col-fba"><button>Contact Us</button></div>
+        </div>
       </div>
     </div>
-    <div class="row jc-center">
+    <div class="row jc-center bottom-border-gray">
       <img src="./images/hero.jpg" class="margin-tb-30">
     </div>
     <div class="row jc-center bg-off-white row-padding">
