--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -25,15 +25,17 @@
         </div>
       </div>
     </div>
-    <div class="row jc-center p50 top-border-gray">
+    <div class="row jc-flex-start p50 top-border-gray rel">
       <div class="col-90 rel">
         <div class="overlay"></div>
-        <img src="./images/hero.jpg" class="poster">
+        <img src="./images/hero.jpg" class="hero">
       </div>
-      <div class="abs col-40 color-white">
-        <h1>The EMR Reimagined for Primary care</h1>
-        <p class="fs-12 lh-double">Can't remember the last time you talked with a patient without focusing on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seemlessly between tasks within the platform. You stay present with patients while your whole care team stays up-to-speed. Be a better doctor with Canvas, designed for primary care providers with the help of primary care providers. </p>
-        <div><button class="button">Get Started</button></div>
+      <div class="abs col-40 color-white jc-flex-start hero-content-inner">
+        <div>
+          <h1>The EMR Reimagined for Primary care</h1>
+          <p class="fs-12 lh-double">Can't remember the last time you talked with a patient without focusing on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seemlessly between tasks within the platform. You stay present with patients while your whole care team stays up-to-speed. Be a better doctor with Canvas, designed for primary care providers with the help of primary care providers. </p>
+          <div><button class="button">Get Started</button></div>
+        </div>
       </div>
     </div>
     <div class="row jc-center bg-off-white row-padding">
