--- a/css-canvas-medical/additional-examples/product.html
+++ b/css-canvas-medical/additional-examples/product.html
@@ -27,21 +27,14 @@
         </div>
       </div>
     </div>
-    <div class="row jc-flex-start top-border-gray rel row-padding p50">
-      <div class="col-90 rel">
+    <div class="row top-border-gray rel hero-padding">
+      <div class="col-100 rel">
         <div class="overlay"></div>
         <img src="../images/product/product-header.jpg" class="hero">
       </div>
-      <div class="abs col-40 color-white jc-flex-start hero-content-inner">
-        <div>
-          <h1>The EMR Reimagined for Primary care</h1>
-          <p class="fs-12 lh-double">Can't remember the last time you talked with a patient without focusing on the EMR?
-            Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move
-            seemlessly between tasks within the platform. You stay present with patients while your whole care team
-            stays up-to-speed. Be a better doctor with Canvas, designed for primary care providers with the help of
-            primary care providers. </p>
-          <div><button class="button">Get Started</button></div>
-        </div>
+      <div class="abs col-40 color-white hero-content-inner">
+        <h1 class="alt-font product-header">It's the foundation for patient-centered primary care.</h1>
+        <p class="fs-12 lh-double">Canvas creates a shared understanding of patient care across clinicians, staff, and patients themselves -- making you more productive, less stressed, and adding just a bit more joy into your practice of medicine. </p>
       </div>
     </div>
     <div class="row jc-center bg-off-white row-padding">
