just need to fix the hero overlay text

--- a/css-canvas-medical/additional-examples/product.html
+++ b/css-canvas-medical/additional-examples/product.html
@@ -31,10 +31,12 @@
       <div class="col-100 rel">
         <div class="overlay"></div>
         <img src="../images/product/product-header.jpg" class="hero">
-      </div>
-      <div class="abs col-40 color-white hero-content-inner">
-        <h1 class="alt-font product-header">It's the foundation for patient-centered primary care.</h1>
-        <p class="fs-12 lh-double">Canvas creates a shared understanding of patient care across clinicians, staff, and patients themselves -- making you more productive, less stressed, and adding just a bit more joy into your practice of medicine. </p>
+        <div class="abs col-50 color-white hero-content-inner">
+          <h1 class="alt-font product-header">It's the foundation for patient-centered primary care.</h1>
+          <p class="fs-12 lh-double">Canvas creates a shared understanding of patient care across clinicians, staff, and
+            patients themselves -- making you more productive, less stressed, and adding just a bit more joy into your practice
+            of medicine. </p>
+        </div>
       </div>
     </div>
     <div class="row jc-center bg-off-white row-padding">
