fixing WIP formatting

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -30,7 +30,12 @@
         <div class="overlay"></div>
         <img src="./images/hero.jpg" class="hero">
       </div>
-      <div class="abs col-40 color-white jc-flex-start hero-content-inner">
+      <div class="abs col-40 color-white hero-content-inner">
+        <h1 class="alt-font">The EMR Reimagined for Primary care</h1>
+        <p class="fs-12 lh-double">Can't remember the last time you talked with a patient without focusing on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seemlessly between tasks within the platform. You stay present with patients while your whole care team stays up-to-speed. Be a better doctor with Canvas, designed for primary care providers with the help of primary care providers. </p>
+        <div><button class="button">Get Started</button></div>
+      </div>
+      <div class="abs col-40 color-white hero-content-inner">
         <h1 class="alt-font">The EMR Reimagined for Primary care</h1>
         <p class="fs-12 lh-double">Can't remember the last time you talked with a patient without focusing on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seemlessly between tasks within the platform. You stay present with patients while your whole care team stays up-to-speed. Be a better doctor with Canvas, designed for primary care providers with the help of primary care providers. </p>
         <div><button class="button">Get Started</button></div>
