fixed responsive formatting. fixed text overlay formatting.  cleaned up some unused code. should be complete

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -25,15 +25,18 @@
         </div>
       </div>
     </div>
-    <div class="row jc-center p50 top-border-gray">
-      <div class="col-90 rel">
+    <div class="row top-border-gray rel hero-padding">
+      <div class="col-100 rel">
         <div class="overlay"></div>
-        <img src="./images/hero.jpg" class="poster">
-      </div>
-      <div class="abs col-40 color-white">
-        <h1>The EMR Reimagined for Primary care</h1>
-        <p class="fs-12 lh-double">Can't remember the last time you talked with a patient without focusing on the EMR? Canvas lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seemlessly between tasks within the platform. You stay present with patients while your whole care team stays up-to-speed. Be a better doctor with Canvas, designed for primary care providers with the help of primary care providers. </p>
-        <div><button class="button">Get Started</button></div>
+        <img src="./images/hero.jpg" class="hero">
+        <div class="abs col-45 color-white hero-content-inner index-top">
+          <h1 class="alt-font product-header">The EMR Reimagined for Primary care</h1>
+          <p class="fs-12 lh-double">Can't remember the last time you talked with a patient without focusing on the EMR? Canvas
+            lets you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seemlessly
+            between tasks within the platform. You stay present with patients while your whole care team stays up-to-speed. Be a
+            better doctor with Canvas, designed for primary care providers with the help of primary care providers. </p>
+          <div><button class="button">Get Started</button></div>
+        </div>
       </div>
     </div>
     <div class="row jc-center bg-off-white row-padding">
