added class='row-X' for all .class>div elements

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <div class="row row-padding ai-center p50 jc-space-between text-gray fs-12">
-      <div>
+      <div class="col-30">
         <img src="./images/logo-blue.svg" class="logo">
       </div>
       <div class="col-50">
@@ -67,7 +67,7 @@
       </div>
     </div>
     <div class="row fs-14 color-white bg-gray jc-space-between footer-padding">
-      <div>
+      <div class="col-30">
         <img src="./images/logo-white.png" class="logo">
         <div class="lh-single rel-footer-info">
           <p>2307 Irving Street, Suite 228</p>
@@ -76,12 +76,12 @@
           <p>info@canvasmedical.com</p>
         </div>
       </div>
-      <div class="fs-16">
+      <div class="fs-16 col-25">
         <p>COMPANY</p>
         <p>About Us</p>
         <p>Blog</p>
       </div>
-      <div class="fs-16">
+      <div class="fs-16 col-25">
         <p>PRODUCT</p>
         <p>Product</p>
         <p>Implementation</p>
