--- a/css-ecommerce-page/index.html
+++ b/css-ecommerce-page/index.html
@@ -9,22 +9,79 @@
 </head>
 <body>
   <div class="container">
-    <div class="col-100"><h1>New Arrivals</h1></div>
-    <div class="col-70">
-      <div class="col-20">
-        <img src="./images/dress1.jpeg">
-      </div>
-      <div class="col-20">
-        <img src="./images/dress1.jpeg">
-      </div>
-      <div class="col-20">
-        <img src="./images/dress1.jpeg">
-      </div>
-      <div class="col-20">
-        <img src="./images/dress1.jpeg">
-      </div>
-      <div class="col-20">
-        <img src="./images/dress1.jpeg">
+    <div class="row jc-space-evenly">
+      <div class="col-20 text-bold"><h2>New Arrivals</h2></div>
+    </div>
+    <div class="row jc-space-evenly">
+      <div class="col-100 jc-center">
+        <div class="row jc-space-evenly">
+          <div class="col-15">
+            <img src="./images/dress1.jpeg">
+            <div class="lh-double text-bold fs-9">
+              <div>
+                <p class="inline">Free People </p><p class="inline color-gray">| Size 6</p>
+              </div>
+              <div>
+                <p class="inline bg-gray" >$35</p><p class="inline color-gray"> <s>$126 retail</s></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-15">
+            <img src="./images/ysl-bag.jpeg">
+            <div class="lh-double text-bold fs-9">
+              <div>
+                <p class="inline">Yves Saint Laurent </p>
+                <p class="inline color-gray">| One Size</p>
+              </div>
+              <div>
+                <p class="inline bg-gray">$200</p>
+                <p class="inline color-gray"><s> $1600 retail</s></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-15">
+            <img src="./images/key.jpeg">
+            <div class="lh-double text-bold fs-9">
+              <div>
+                <p class="inline">Tiffany </p>
+                <p class="inline color-gray">| One Size</p>
+              </div>
+              <div>
+                <p class="inline bg-gray">$476</p>
+                <p class="inline color-gray"><s> $1500 retail</s></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-15">
+            <img src="./images/lv-bag.jpg" class="of-contain">
+            <div class="lh-double text-bold fs-9">
+              <div>
+                <p class="inline">Louis Vuitton </p>
+                <p class="inline color-gray">| One Size</p>
+              </div>
+              <div>
+                <p class="inline bg-gray">$95</p>
+                <p class="inline color-gray"><s> $1150 retail</s></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-15">
+            <img src="./images/dress2.jpeg">
+            <div class="lh-double text-bold fs-9">
+              <div>
+                <p class="inline">Reformation </p>
+                <p class="inline color-gray">| Size 4</p>
+              </div>
+              <div>
+                <p class="inline bg-gray">$20</p>
+                <p class="inline color-gray"><s> $198 retail</s></p>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
       </div>
     </div>
 
