WIP. just need to fix styling. functionality intact.

--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -11,12 +11,19 @@
   <div class="container">
     <div class="row">
       <div class="column-third">
-        <form>
+        <form class="form-open">
           <button class="button-modal">Open Modal</button>
         </form>
       </div>
-      <div class="col-100 overlay">
-
+      <div class="col-100 overlay hidden">
+        <div class="row">
+          <div class="col-40 popup ta-center">
+            <p>Would you like to take a survey?</p>
+            <form class="form-popup">
+              <button class="popup-button">NO</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
   </div>
