completed javascript-modal exercise

--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -16,12 +16,14 @@
         </form>
       </div>
       <div class="col-100 overlay hidden">
-        <div class="row">
+        <div class="row h-100vh ai-center">
           <div class="col-40 popup ta-center">
-            <p>Would you like to take a survey?</p>
-            <form class="form-popup">
-              <button class="popup-button">NO</button>
-            </form>
+            <div class="row h-100p ai-center">
+              <div class="col-100">
+                <p class="m-40">Would you like to take a survey?</p>
+                <form class="form-popup"><button class="popup-button m-40">NO</button></form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
