WIP. switching to laptop

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="row jc-center ai-center">
+    <div class="row jc-center ai-center h-100p">
       <div class="col-100"></div>
     </div>
   </div>
