WIP. finished accuracy display. need to add replay button.

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -9,8 +9,25 @@
 </head>
 <body>
   <div class="container">
-    <div class="row jc-center ai-center h-100p">
+    <div class="row jc-center ai-flex-end h-50p">
 
+    </div>
+    <div class="row jc-center ai-flex-start">
+      <div class="m-50">
+        <p class="successful-press inline">Successful Presses: </p>
+        <p class="successes successful-press inline"></p>
+      </div>
+      <div class="m-50">
+        <p class="failed-press inline">Failed Presses: </p>
+        <p class="fails failed-press inline"></p>
+      </div>
+    </div>
+    <div class="row jc-center ai-flex-start">
+      <div class="m-50">
+        <p class="inline">Accuracy: </p>
+        <p class="accuracy inline">0</p>
+        <p class="inline">%</p>
+      </div>
     </div>
   </div>
   <script src="./main.js"></script>
