completed javascript-typing-tutor challenge

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -29,6 +29,13 @@
         <p class="inline">%</p>
       </div>
     </div>
+    <div class="row jc-center ai-flex-start">
+      <form>
+        <button class="hidden">
+          Play Again
+        </button>
+      </form>
+    </div>
   </div>
   <script src="./main.js"></script>
 </body>
