completed exercise. started working on system for calculating and displaying wpm but may or may not revisit later

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -13,6 +13,13 @@
 
     </div>
     <div class="row jc-center ai-flex-start">
+      <!-- <div class="m-50">
+        <p class="inline">0</p>
+        <p class="inline preformatted"> words per minute</p>
+      </div> -->
+    </div>
+
+    <div class="row jc-center ai-flex-start">
       <div class="m-50">
         <p class="successful-press inline">Successful Presses: </p>
         <p class="successes successful-press inline"></p>
