WIP. added functionality to show round counter on the page. working on game scoring next

--- a/object-manipulation-3/index.html
+++ b/object-manipulation-3/index.html
@@ -10,11 +10,19 @@
 <body>
   <div class="container">
     <div class="row full-size jc-center ai-center">
-      <div class="col-70">
-        <p class="ta-center">Time to play some blackjack!</p>
-        <form class="ta-center">
+      <div class="col-50">
+        <div class="ta-center m-10 fs-60">
+          <p class="inline header">Time to play some blackjack!</p>
+          <p class="inline winner-text"></p>
+        </div>
+
+        <form class="ta-center m-50">
           <button>Play Game</button>
         </form>
+        <div class="ta-center m-10 fs-45">
+          <p class="inline">Round </p>
+          <p class="inline round-counter">1</p>
+        </div>
       </div>
     </div>
   </div>
