WIP. added responsiveness to the image displayed depending on who wins. working on tiebreakers next.

--- a/object-manipulation-3/index.html
+++ b/object-manipulation-3/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="row full-size jc-center ai-center">
-      <div class="col-50">
+      <div class="col-40">
         <div class="ta-center m-10 fs-60">
           <p class="inline header">Time to play some blackjack!</p>
           <p class="inline winner-text"></p>
@@ -24,6 +24,7 @@
           <p class="inline round-counter">0</p>
         </div>
       </div>
+      <div class="col-30 hidden"><img src="./images/Bender.png"></div>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.js"></script>
