cleaned up radio button code. fixing active radio button code and left/right buttons next

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -13,17 +13,17 @@
   <div class="container">
     <div class="slider">
       <div class="slides">
-        <div class="slide first carousel-first"><div class="pokemon-name">Bulbasuar</div><img src="./images/001.png"></div>
+        <div class="slide carousel-first" id="first"><div class="pokemon-name">Bulbasuar</div><img src="./images/001.png"></div>
         <div class="slide"><div class="pokemon-name">Charmander</div><img src="./images/004.png"></div>
         <div class="slide"><div class="pokemon-name">Squirtle</div><img src="./images/007.png"></div>
         <div class="slide"><div class="pokemon-name">Pikachu</div><img src="./images/025.png"></div>
         <div class="slide"><div class="pokemon-name">Jigglypuff</div><img src="./images/039.png"></div>
         <div class="nav-buttons">
-          <div class="manual-button radio-button-1 active-button-index"></div>
-          <div class="manual-button radio-button-2"></div>
-          <div class="manual-button radio-button-3"></div>
-          <div class="manual-button radio-button-4"></div>
-          <div class="manual-button radio-button-5"></div>
+          <div class="manual-button active-button-index" id="carousel-first"></div>
+          <div class="manual-button" id="carousel-second"></div>
+          <div class="manual-button" id="carousel-third"></div>
+          <div class="manual-button" id="carousel-fourth"></div>
+          <div class="manual-button" id="carousel-fifth"></div>
         </div>
         <div class="arrows">
           <div class="right-arrow">
