right arrow now correctly updates to next index. need to fix active button indexing next. then left arrow functionality

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -19,11 +19,11 @@
         <div class="slide"><div class="pokemon-name">Pikachu</div><img src="./images/025.png"></div>
         <div class="slide"><div class="pokemon-name">Jigglypuff</div><img src="./images/039.png"></div>
         <div class="nav-buttons">
-          <div class="manual-button active-button-index" id="carousel-first"></div>
-          <div class="manual-button" id="carousel-second"></div>
-          <div class="manual-button" id="carousel-third"></div>
-          <div class="manual-button" id="carousel-fourth"></div>
-          <div class="manual-button" id="carousel-fifth"></div>
+          <div class="manual-button active-button-index" id="carousel-1"></div>
+          <div class="manual-button" id="carousel-2"></div>
+          <div class="manual-button" id="carousel-3"></div>
+          <div class="manual-button" id="carousel-4"></div>
+          <div class="manual-button" id="carousel-5"></div>
         </div>
         <div class="arrows">
           <div class="right-arrow">
